Implement building user relationship and building facility relationship in building controller and service
